Fix for phase in background tiling.

When computing the phase for background image tiling using snapped
coordinates, we get very incorrect results, and unstable results,
when the background-position is large (because the division of
the position by the tile width magnifies the rounding artifacts).
This patch changes the phase calculation to compute the phase using
unsnapped values then re-apply the fractional component to the
snapped values. This results in stable, near-pixel perfect results.
Given very large background-positions, we can't do much better.
There's a new test and some results changed by a pixel or so.

There is some code refactoring to reduce what is becoming a very
unwieldy method. Sorry that makes it harder to review.

R=leviw@chromium.org
BUG=593079

Review URL: https://codereview.chromium.org/1847983003

Cr-Commit-Position: refs/heads/master@{#384706}

Former-commit-id: 41f3d062c90c1a5d67228e6e061c7e35fd4d62fd